# persian_str_rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: tests.rs
